# shakeIA

./: Interface.ipynb  README.md  pyproject.toml
src/shakeIA/: Interface.ipynb  __init__.py  dataset.py  example.py  model.py  train.py
