[tool.poetry]
name = "shakeIA"
version = "0.1.0"
description = "A shakespearian speaking IA for the Unige Deep Learning course"
authors = ["ethan Arm <ethan.arm@etu.unige.ch>", "Aylin Tekkoyun <aylin.tekkoyun@etu.unige.ch"]
readme = "README.md"
packages = [{include = "shakeIA", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
