[tool.poetry]
name = "shakeIA"
version = "0.1.0"
description = "A shakespearian speaking IA for the Unige Deep Learning course"
authors = ["ethan Arm <ethan.arm@etu.unige.ch>", "Aylin Tekkoyun <aylin.tekkoyun@etu.unige.ch"]
readme = "README.md"
packages = [{include = "shakeIA", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.5.1"
tqdm = "^4.67.0"
numpy = "^2.1.3"
matplotlib = "^3.10.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
packages = "shakeIA"

disallow_any_expr = true
disallow_any_explicit = true
disallow_any_decorated = true

disallow_untyped_defs = true

warn_return_any = true
warn_unreachable = true

local_partial_types = true
implicit_reexport = false
strict = true

show_column_numbers = true
show_error_code_links = true
pretty = true

cache_fine_grained = true
#warn_imcomplete_stub = true
